Hot fix on mobile device.

--- a/css/search_radios.css
+++ b/css/search_radios.css
@@ -112,7 +112,7 @@
   #search-radios {
     margin-top: 15px;
     overflow: hidden;
-    height: 115px;
+    height: 0;
   }
 
   #search-radios .form-item,
